# atled

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  build.py
assets/shaders/: basic.fs  basic.vs
examples/: CmakeLists.txt
examples/3BodyProblem/: CmakeLists.txt
examples/3BodyProblem/include/: graphicsImpl.hpp
examples/3BodyProblem/src/: 3Body.cpp  graphicsImpl.cpp
examples/Collider/: CMakeLists.txt  Cmakelists.txt  README.md
examples/Collider/src/: main.cpp
examples/Loaders/: CmakeLists.txt
examples/Loaders/src/: main.cpp
examples/NBody/: CMakeLists.txt  config.json
examples/NBody/src/: NBodySimulation.cpp  config.json
examples/NBodyProblem/: CmakeLists.txt
examples/NBodyProblem/include/: graphicsImpl.hpp
examples/NBodyProblem/src/: NBody.cpp  graphicsImplNBody.cpp
examples/Shapes2D/: CMakeLists.txt  CmakeLists.txt  README.md
examples/Shapes2D/include/: Engine.hpp  graphicsImpl.hpp
examples/Shapes2D/src/: Engine.cpp  Main.cpp  Main.h  drawing2D.cpp  graphicsImpl.cpp
examples/Shapes3D/: CmakeLists.txt
examples/Shapes3D/src/: Engine.cpp  Main.cpp
examples/Template/: CMakeLists.txt  config.json
examples/Template/src/: Main.cpp
examples/basic2D/: CmakeLists.txt
examples/basic2D/include/: graphicsImpl.hpp
examples/basic2D/src/: drawing2D.cpp  graphicsImpl.cpp
examples/computerUse/: CMakeLists.txt  CmakeLists.txt  config.json
examples/computerUse/src/: Main.cpp
examples/inputTest/: CmakeLists.txt
examples/inputTest/src/: Main.cpp
examples/lights_ex/: CMakeLists.txt  CmakeLists.txt
examples/lights_ex/src/: Main.cpp
examples/mesh_loader/: Cmakelists.txt
examples/mesh_loader/src/: main.cpp
examples/nBody/: CmakeLists.txt  README.md  config.json
examples/newtemplate/: CmakeLists.txt
examples/particles/: CMakeLists.txt  Cmakelists.txt  README.md
examples/rotation/: CMakeLists.txt  CmakeLists.txt
examples/snake/: CmakeLists.txt
examples/template/: CmakeLists.txt
examples/ui/: CMakeLists.txt  CmakeLists.txt  config.json
modules/: CMakeLists.txt  CmakeLists.txt
modules/actuators/: CMakeLists.txt
modules/algorithms/: CmakeLists.txt
modules/common/: CmakeLists.txt
modules/communications/: CMakeLists.txt
modules/core/: CMakeLists.txt  CmakeLists.txt
modules/filesystem/: CMakeLists.txt
modules/filesystem/filesystemTest/: CMakeLists.txt  filesystemTest.cpp
modules/filesystem/include/: FileSystemManager.hpp  FilesystemManager.hpp
modules/filesystem/src/: FilesystemManager.cpp
modules/graphics/: CMakeLists.txt  CmakeLists.txt
modules/graphics/models/: CMakeLists.txt
modules/graphics/models/2D/include/: Arc.hpp  Circle.hpp  Line.hpp  Model2D.hpp  Model2DFactory.hpp  PolyLine.hpp  Polygon.hpp  Rectangle.hpp  RegularPolygon.hpp  Triangle.hpp
modules/graphics/models/2D/src/: Arc.cpp  Circle.cpp  Line.cpp  Model2D.cpp  Model2DFactory.cpp  Pixel.cpp  Polygon.cpp  Polyline.cpp  Rectangle.cpp  RegularPolygon.cpp  Triangle.cpp
modules/graphics/models/3D/include/: Capsule.hpp  Cube.hpp  Cylinder.hpp  Line3D.hpp  Mesh.hpp  Mesh3D.hpp  Model3D.hpp  Model3DFactory.hpp  Plane.hpp  Pyramid.hpp  Sphere.hpp
modules/graphics/models/3D/src/: Capsule.cpp  Cube.cpp  Cylinder.cpp  Line3D.cpp  Mesh.cpp  Mesh3D.cpp  Model3D.cpp  Model3DFactory.cpp  Plane.cpp  Sphere.cpp
modules/graphics/models/include/: Arc.hpp  Model2D.hpp
modules/graphics/models/interface/include/: Conversion.hpp  Model.hpp  ModelFactory.hpp
modules/graphics/models/interface/src/: Conversion.cpp  ModelFactory.cpp
modules/graphics/models/src/: Circle.cpp
modules/graphics/shader/: CMakeLists.txt
modules/graphics/shader/include/: IShader.hpp  raylibShader.hpp  shaderFactory.hpp
modules/graphics/shader/src/: RaylibShader.cpp  shaderFactory.cpp
modules/gui/: CMakeLists.txt  CmakeLists.txt
modules/inputs/: CMakeLists.txt  CmakeLists.txt
modules/inputs/include/: AtledMouse.hpp  InputManager.hpp  InputManagerBuilder.hpp  Key.hpp  Keyboard.hpp  Mouse.hpp  RaylibMouse.hpp
modules/inputs/include/Implementation/: RaylibKeyboard.hpp  RaylibMouse.hpp
modules/inputs/include/factories/: IKeyboard.hpp  IMouse.hpp  KeyboardFactory.hpp  MouseFactory.hpp
modules/inputs/src/: AtledMouseLinux.cpp  AtledMouseWindows.cpp  InputManager.cpp  InputManagerBuilder.cpp  Keyboard.cpp  Mouse.cpp  RaylibKeyboard.cpp  RaylibMouse.cpp
modules/logging/: CMakeLists.txt  CmakeLists.txt
modules/math/: CMakeLists.txt  CmakeLists.txt
modules/math/math_tests/: CMakeLists.txt
modules/physics/: CMakeLists.txt  CmakeLists.txt
modules/physics/body/: CMakeLists.txt
modules/physics/body/include/: Velocity.hpp  body.hpp  rigidbody.hpp
modules/physics/body/src/: body.cpp  rigidbody.cpp  velocity.cpp
modules/physics/collisions/: CMakeLists.txt
modules/physics/collisions/include/: AdvancedCollider.hpp  AtledCollider.hpp  BoundingBox.hpp  ColliderFactory.hpp  ColliderType.hpp  CollisionChecker.hpp  ICollider.hpp  SimpleCollider.hpp
modules/physics/collisions/src/: AtledCollider.cpp  BoundingBox.cpp  ColliderFactory.cpp  SimpleCollider.cpp
modules/physics/include/: frame.hpp
modules/physics/particles/: CMakeLists.txt
modules/physics/particles/include/: Particle.hpp
modules/physics/particles/src/: Particle.cpp
modules/physics/physics_manager/: CMakeLists.txt
modules/physics/physics_manager/include/: PhysicsManager.hpp
modules/physics/physics_manager/src/: PhysicsManager.cpp
modules/physics/space3D/: CMakeLists.txt
modules/physics/space3D/include/: Frame.hpp  Position.hpp  Quaternion.hpp  Vector3.hpp
modules/physics/space3D/src/: Frame.cpp  Position.cpp  Quaternion.cpp  Vector3.cpp
modules/physics/src/: frame.cpp  rigidbody.cpp
modules/physics/units/: CmakeLists.txt
modules/physics/units/include/: Literals.hpp  QuantityOperators.hpp
modules/resources/: CmakeLists.txt
modules/sensors/: CmakeLists.txt
modules/sound/: CmakeLists.txt
modules/units/: CmakeLists.txt
modules/utils/: CmakeLists.txt
modules/vision/: CmakeLists.txt
src/: atled.cpp  graphicsImpl.cpp  main.cpp
(+393 files in other folders)
